...
        ),
        
        const SizedBox(height: 24),
        
        // Chronomètre
        Text(
          key: const Key('workout__text-2'),
          state.formattedTime,
          style: const TextStyle(
            color: Colors.black,
            fontSize: 160,
            fontWeight: FontWeight.w400,
          ),
...
