...
  "savePresetLabel": "Sauvegarder le préréglage rapide",
  "startIntervalLabel": "Démarrer l'intervalle",
  "editPresetsLabel": "Éditer les préréglages",
  "addPresetLabel": "Ajouter un préréglage",
  "presetNamePrompt": "Nom du préréglage",
  "cancelButton": "ANNULER",
  "okButton": "OK",
  "simpleModeButton": "SIMPLE",
  "advancedModeButton": "ADVANCED",
  "closeButtonLabel": "Fermer",
  "saveButtonLabel": "Enregistrer",
  "simpleModeLabel": "Mode simple",
  "advancedModeLabel": "Mode avancé",
...
