...
          children: [
            // Bouton fermer
            Semantics(
              label: l10n.closeButtonLabel,
              button: true,
              child: IconButton(
                key: const Key('preset_editor__iconbutton-2'),
                icon: const Icon(Icons.close, color: AppColors.onPrimary),
                iconSize: 24,
                onPressed: onClose,
              ),
            ),

...

            // Bouton sauvegarder
            Semantics(
              label: l10n.saveButtonLabel,
              button: true,
              child: IconButton(
                key: const Key('preset_editor__iconbutton-5'),
                icon: const Icon(Icons.save, color: AppColors.onPrimary),
                iconSize: 24,
                onPressed: onSave,
              ),
            ),
          ],
...
