...
    return Padding(
      padding: const EdgeInsets.symmetric(horizontal: 20),
      child: Semantics(
        label: l10n.presetNameLabel,
        textField: true,
        child: TextField(
          key: const Key('preset_editor__input-6'),
          controller: TextEditingController(text: name)
            ..selection = TextSelection.collapsed(offset: name.length),
          onChanged: onNameChange,
          style: AppTextStyles.body.copyWith(
            fontSize: 16,
            color: AppColors.primary,
...
